Fixing width of password field to 300px to avoid overflow of wrapper

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -184,7 +184,7 @@ hr {
     color: white;
     overflow-wrap: break-word;
     text-align: center;
-    max-width: 50vw;
+    max-width: 300px;
 }
 
 #password-length {
